Bug 1622445 - Don't cache the SVGGeometryElement's Path with OMTP rendering. r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D66955

--HG--
extra : moz-landing-system : lando